clang/test/BSC/Negative/Generic/SymbolBeforeTemplate/symbol_do_not_crash1.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// TODO: improve the error message
*t<int N>();
// expected-error@-1{{expected identifier}}
// expected-error@-2{{expected ',' or '>' in template-parameter-list}}
// expected-error@-3{{expected '>'}}
